Changelog
=========

1.0.4 (unreleased)
------------------

- Nothing changed yet.


1.0.3 (2013-09-12)
------------------

- Add collective.Checktranslate.


1.0.2 (2013-06-19)
------------------

- Nothing changed yet.


1.0.1 (2013-06-19)
------------------

- Nothing changed yet.


1.0 (2013-06-18)
----------------

- Package created using templer
  []