@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>0001</version>
+  <version>0002</version>
   <dependencies>
       <dependency>profile-qi.portlet.TagClouds:default</dependency>
       <dependency>profile-collective.ckeditor:default</dependency>
