@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object>
+  <hidden manager="plone.portalfooter" skinname="Plone Default">
+    <viewlet name="plone.footer" remove="True" />
+  </hidden>
+</object>
